kubeflow/manifests/envoyfilter-x-forwarded-host.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: x-forwarded-host
  namespace: istio-system
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: "function envoy_on_request(request_handle)\n  local host = request_handle:headers():get(\"\
            :authority\")\n  request_handle:headers():add(\"x-forwarded-host\", host)\n\
            end\n"
  workloadSelector:
    labels:
      istio: ingressgateway
